--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<html><head><title>Home</title></head><body><h1>Welcome to My Homepage</h1></body></html> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Welcome to Homepage </h1>
+    <button>click me!</button>
+    <script src="1st.js"></script>
+</body>
+</html>   
